src/yini_test/cases/golden/lenient/valid/concatenation/string-plus-null.yini
@yini

^ Concat
emptyLabel = "value-" + null
upperNullLabel = "value-" + NULL
