src/yini_test/cases/golden/lenient/invalid/sections/section-marker-separator-leading-underscore.yini
@yini

_^ Section
value = true
